# telemetry-frame-mapper

./: .gitignore  README.md  config.yaml  dev.bat  dev.sh  docker-compose.yml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
backend/: main.py  requirements.txt
backend/core/: config.py
backend/db/: database.py  models.py
backend/services/: geometry.py  ingest.py  quality.py
dashboard/: _insert_srt.py  index.html  server.py  styles.css
frontend/: package-lock.json  package.json  tailwind.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/features/map/: LayerControls.tsx  LeafletMap.tsx  MapTab.tsx  SessionSidebar.tsx
frontend/src/features/map/hooks/: useCoverageResult.ts  useFootprints.ts  useSession.ts
frontend/src/shared/api/: client.ts
frontend/src/shared/components/: Badge.tsx  Button.tsx  Panel.tsx
frontend/src/shared/stores/: mapStore.ts
frontend/src/types/: api.ts
src/drone_video_geotagger/: __init__.py  audit.py  cli.py  exiftool.py  frames.py  paths.py  telemetry.py  video.py
tests/: conftest.py  test_api_sessions.py  test_config.py  test_dashboard.py  test_exiftool.py  test_geometry.py  test_ingest.py  test_telemetry.py
tests/backend/: test_quality.py
tests/cli/: test_frames.py
