[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "drone-video-geotagger"
version = "0.1.0"
description = "Geotags DJI drone video frames with GPS EXIF metadata for WebODM/OpenDroneMap processing."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
  { name = "Brandon" }
]
keywords = ["dji", "exif", "geotagging", "webodm", "opendronemap"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Multimedia :: Graphics",
  "Topic :: Scientific/Engineering :: GIS"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.4"
]

[project.scripts]
drone-video-geotagger = "drone_video_geotagger.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/drone_video_geotagger"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
addopts = "-s"
testpaths = ["tests"]
pythonpath = ["."]
