[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "drone-video-geotagger"
version = "0.1.0"
description = "Geotags DJI drone video frames with GPS EXIF metadata for WebODM/OpenDroneMap processing."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
  { name = "Brandon" }
]
keywords = ["dji", "exif", "geotagging", "webodm", "opendronemap"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Multimedia :: Graphics",
  "Topic :: Scientific/Engineering :: GIS"
]

[project.optional-dependencies]
backend = [
  "fastapi==0.111.0",
  "uvicorn[standard]==0.29.0",
  "sqlalchemy==2.0.30",
  "pyyaml==6.0.1",
  "pillow==12.2.0",
  "piexif==1.1.3",
  "opencv-python-headless==4.9.0.80",
  "numpy<2",
  "shapely==2.0.4",
  "geopandas==1.1.2",
  "pyproj==3.6.1",
  "httpx==0.28.1",
  "python-multipart==0.0.26",
  "aiofiles==23.2.1",
  "lxml==6.1.0",
  "gpxpy==1.6.2",
  "simplekml==1.3.6"
]
dev = [
  "pytest>=8.0",
  "pytest-asyncio==1.3.0",
  "ruff>=0.4"
]

[project.scripts]
drone-video-geotagger = "drone_video_geotagger.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/drone_video_geotagger"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
addopts = "-s"
testpaths = ["tests"]
pythonpath = ["."]
